# bct-rs

./: Cargo.toml  README.md
src/: lib.rs  translate.rs  tryte.rs  tryte_tests.rs  word.rs  word_tests.rs
