[package]
name = "bct"
version = "0.1.0"
authors = ["Patryk Kalinowski <patryk@kalinowski.dev>"]
edition = "2018"

description = "A simple Binary-Coded Ternary implementation"
repository = "https://github.com/patrislav/bct-rs"
readme = "README.md"
license = "MIT"

[badges]
maintenance = { status = "experimental" }
